force-app/main/default/objects/Sales_Rep_Profile__c/fields/YTD_Quota__c.field-meta.xml
<CustomField>
    <fullName>YTD_Quota__c</fullName>
    <description>The quota amount year to date</description>
    <formula>YTD_Quota_updated__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>YTD Quota</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>