force-app/main/default/objects/Sales_Rep_Profile__c/fields/YTD_Quota_corrected__c.field-meta.xml
<CustomField>
    <fullName>YTD_Quota_corrected__c</fullName>
    <formula>IF(Current_Fiscal_Months__c = 1, Month_1_Quota_Amount__c,
(IF(Current_Fiscal_Months__c = 2, Month_1_Quota_Amount__c+Month_2_Quota_Amount__c,
(IF(Current_Fiscal_Months__c = 3, Q1_Quota_Amount__c,
(IF(Current_Fiscal_Months__c = 4, Q1_Quota_Amount__c+Month_4_Quota_Amount__c,
(IF(Current_Fiscal_Months__c = 5, Q1_Quota_Amount__c+Month_4_Quota_Amount__c+Month_5_Quota_Amount__c,
(IF(Current_Fiscal_Months__c = 6, Q1_Quota_Amount__c+Q2_Quota_Amount__c,
(IF(Current_Fiscal_Months__c = 7, Q1_Quota_Amount__c+Q2_Quota_Amount__c+Month_7_Quota_Amount__c,
(IF(Current_Fiscal_Months__c = 8, Q1_Quota_Amount__c+Q2_Quota_Amount__c+Month_7_Quota_Amount__c+Month_8_Quota_Amount__c,
(IF(Current_Fiscal_Months__c = 9, Q1_Quota_Amount__c+Q2_Quota_Amount__c+Q3_Quota_Amount__c,
(IF(Current_Fiscal_Months__c = 10, Q1_Quota_Amount__c+Q2_Quota_Amount__c+Q3_Quota_Amount__c+Month_10_Quota_Amount__c,
(IF(Current_Fiscal_Months__c = 11, Q1_Quota_Amount__c+Q2_Quota_Amount__c+Q3_Quota_Amount__c+Month_10_Quota_Amount__c+Month_11_Quota_Amount__c,
(IF(Current_Fiscal_Months__c = 12, Q1_Quota_Amount__c+Q2_Quota_Amount__c+Q3_Quota_Amount__c+Q4_Quota_Amount__c,0
)))))))))))))))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>YTD Quota corrected</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>