force-app/main/default/objects/Sales_Rep_Profile__c/fields/YTD_Quota_Percentage__c.field-meta.xml
<CustomField>
    <fullName>YTD_Quota_Percentage__c</fullName>
    <description>YTD Revenue / YTD Quota</description>
    <formula>IF( YTD_Quota__c &gt; 0,  YTD_Revenue__c / YTD_Quota__c , 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>YTD Quota Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>