force-app/main/default/objects/Sales_Rep_Profile__c/fields/YTD_Quota_updated__c.field-meta.xml
<CustomField>
    <fullName>YTD_Quota_updated__c</fullName>
    <description>Populated in the code</description>
    <label>YTD Quota updated</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>