force-app/main/default/objects/Sales_Rep_Profile__c/validationRules/User_Record_Name_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>User_Record_Name_Validation</fullName>
    <active>true</active>
    <description>User Record Name Cannot be empty, if it&apos;s empty it might cause batch process to fail</description>
    <errorConditionFormula>((User_Record_Name__c = &apos;&apos;) || (User_Record_Name__c = Null )) &amp;&amp; Placeholder__c = false</errorConditionFormula>
    <errorDisplayField>User_Record_Name__c</errorDisplayField>
    <errorMessage>User Record Name cannot be blank. If it&apos;s a placeholder records check placeholder field</errorMessage>
</ValidationRule>