force-app/main/default/objects/Sales_Rep_Profile__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>User_Record_Name__c</columns>
    <columns>Manger_Name__c</columns>
    <columns>Interim_Manager__c</columns>
    <columns>Profile_Type__c</columns>
    <columns>Role__c</columns>
    <columns>Tenure__c</columns>
    <columns>Annual_Quota_Amount__c</columns>
    <columns>Rep_Staus__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>