force-app/main/default/objects/Sales_Rep_Profile__c/listViews/Manager.listView-meta.xml
<ListView>
    <fullName>Manager</fullName>
    <columns>NAME</columns>
    <columns>Sales_Manager__c</columns>
    <filterScope>Mine</filterScope>
    <label>Manager</label>
</ListView>